--- a/index.html
+++ b/index.html
@@ -45,5 +45,14 @@
 
 
     <script src="app.js"> </script>
+
+    <footer style="background-color: #070606;
+    color: white;
+    padding: 5px;
+    text-align: center;
+    position: fixed;
+    bottom: 0;
+    width: 100%;">Copyright &copy;2024.All rights reserved by Pranav Rajesh Gujar</footer>
+
 </body>
 </html>
